--- a/.github/workflows/godbolt.yml
+++ b/.github/workflows/godbolt.yml
@@ -11,7 +11,13 @@ jobs:
     - uses: actions/checkout@v1
     - name: build preprocessed file
       run: cpp include/unconstexpr.hpp > output.cpp && cat tests/unconstexpr.cpp  | grep -v 'unconstexpr.hpp' >> output.cpp
+
     - name: test latest gcc
       run: curl 'https://godbolt.org/api/compiler/gsnapshot/compile?options=-std=c%2b%2b2a' --data-binary "$(cat output.cpp)"
     - name: test latest clang
       run: curl 'https://godbolt.org/api/compiler/clang_trunk/compile?options=-std=c%2b%2b2a' --data-binary "$(cat output.cpp)"
+
+    - name: test gcc 9.1
+      run: curl 'https://godbolt.org/api/compiler/g91/compile?options=-std=c%2b%2b2a' --data-binary "$(cat output.cpp)"
+    - name: test clang 9.0
+      run: curl 'https://godbolt.org/api/compiler/clang900/compile?options=-std=c%2b%2b2a' --data-binary "$(cat output.cpp)"
