--- a/.github/workflows/godbolt.yml
+++ b/.github/workflows/godbolt.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: build preprocessed file
-      run: cpp include/unconstexpr.hpp > output.cpp && cat tests/unconstexpr.cpp  | grep -v 'unconstexpr.hpp' >> output.cpp
+      run: cpp include/unconstexpr.hpp | grep -v '^#' > output.cpp && cat tests/unconstexpr.cpp  | grep -v 'unconstexpr.hpp' >> output.cpp
 
     - name: test latest gcc
       run: curl 'https://godbolt.org/api/compiler/gsnapshot/compile?options=-std=c%2b%2b2a' --data-binary "$(cat output.cpp)"
