--- a/.github/workflows/godbolt.yml
+++ b/.github/workflows/godbolt.yml
@@ -7,7 +7,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     
     steps:
@@ -28,3 +27,7 @@ jobs:
 
     - name: godbolt header
       run: cpp include/unconstexpr.hpp > unconstexpr_godbolt.hpp
+
+    container:
+      image: 'gcc:latest'
+    
