--- a/.github/workflows/godbolt.yml
+++ b/.github/workflows/godbolt.yml
@@ -30,13 +30,13 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2-beta
+    - uses: actions/checkout@godbolt
     - name: godbolt header
       run: |
-        git checkout godbolt &&
         git reset --hard origin/master &&
         cpp include/unconstexpr.hpp > unconstexpr_godbolt.hpp &&
         git config --global user.name 'Bastien Penavayre' &&
         git config --global user.email 'DaemonSnake@users.noreply.github.com' &&
         git add unconstexpr_godbolt.hpp &&
         git commit -m "Update godbolt header" &&
-        git push origin godbolt
+        git push
