--- a/.github/workflows/godbolt.yml
+++ b/.github/workflows/godbolt.yml
@@ -34,7 +34,7 @@ jobs:
         ref: godbolt
     - name: godbolt header
       run: |
-        git fetch refs/remotes/origin/
+        git fetch refs/remotes/origin/master
         git reset --hard refs/remotes/origin/master
         cpp include/unconstexpr.hpp > unconstexpr_godbolt.hpp
 
