--- a/.github/workflows/godbolt.yml
+++ b/.github/workflows/godbolt.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v2-beta
+    - uses: actions/checkout@v1
       with:
         ref: godbolt
     - name: godbolt header
